# visioncpp

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  OP__AbsSub_8hpp.html  OP__AbsSub_8hpp__dep__incl.map  OP__AbsSub_8hpp__dep__incl.md5  OP__AbsSub_8hpp_source.html  OP__Add_8hpp.html  OP__Add_8hpp__dep__incl.map  OP__Add_8hpp__dep__incl.md5  OP__Add_8hpp_source.html  OP__AniDiff_8hpp.html  OP__AniDiff_8hpp__dep__incl.map  OP__AniDiff_8hpp__dep__incl.md5  OP__AniDiff_8hpp_source.html  OP__BGRToRGB_8hpp.html  OP__BGRToRGB_8hpp__dep__incl.map  OP__BGRToRGB_8hpp__dep__incl.md5  OP__BGRToRGB_8hpp_source.html  OP__Broadcast_8hpp.html  OP__Broadcast_8hpp__dep__incl.map  OP__Broadcast_8hpp__dep__incl.md5  OP__Broadcast_8hpp_source.html  OP__Div_8hpp.html  OP__Div_8hpp__dep__incl.map  OP__Div_8hpp__dep__incl.md5  OP__Div_8hpp_source.html  OP__DownsampleAverage_8hpp.html  OP__DownsampleAverage_8hpp__dep__incl.map  OP__DownsampleAverage_8hpp__dep__incl.md5  OP__DownsampleAverage_8hpp_source.html  OP__DownsampleClosest_8hpp.html  OP__DownsampleClosest_8hpp__dep__incl.map  OP__DownsampleClosest_8hpp__dep__incl.md5  OP__DownsampleClosest_8hpp_source.html  OP__F32C3ToU8C3_8hpp.html  OP__F32C3ToU8C3_8hpp__dep__incl.map  (+2018 more)
.github/workflows/: docs-build-deploy.yml
cmake/: FindComputeCpp.cmake  common.cmake  doxygen.cmake  examples.cmake  testgen.cmake  tests.cmake
cmake/Modules/: ComputeCppCompilerChecks.cmake  ComputeCppIRMap.cmake  FindComputeCpp.cmake  common.cmake  examples.cmake  tests.cmake
cmake/toolchains/: arm-gcc-poky.cmake  gcc-generic.cmake
contrib/python/: .env  .gitignore  README.md  README.rst  requirements.txt  setup.py
contrib/python/docs/: Makefile  api.rst  conf.py  index.rst  license.rst  requirements.txt  tutorial.md  tutorial.rst  visioncpp.rst
contrib/python/docs/modules/: visioncpp.backend.rst  visioncpp.cache.rst  visioncpp.codegen.rst  visioncpp.util.rst
contrib/python/examples/: Demo.ipynb  hello_world_image.py  hello_world_webcam.py  requirements.txt
contrib/python/tests/: __init__.py
contrib/python/visioncpp/: __init__.py  backend.py  cache.py  codegen.py  util.py
contrib/python/visioncpp/tests/: __init__.py  test_cache.py  test_codegen.py  test_util.py  util.py
doc/: Doxyfile.in
examples/: anisotropic_diffusion.cpp  bayer_filter.cpp  canny.cpp  depth_map_from_2_images.cpp  edge_detector.cpp  edge_detector_cimg.cpp  edge_detector_flexible_backend.cpp  greyscale.cpp  harris.cpp  hello_world.cpp  optical_flow_LK.cpp  pyramid.cpp  rgb2hsv.cpp  simple_conv.cpp  threshold.cpp
include/: visioncpp.hpp
include/framework/: forward_declarations.hpp  framework.hpp
include/framework/device/: device.hpp
include/framework/device/sycl/: device.hpp  extract_accessors.hpp  sycl_device.hpp
include/framework/evaluator/: evaluator.hpp
include/framework/evaluator/eval_assign/: eval_assign.hpp  eval_assign_partial.hpp
include/framework/evaluator/eval_expression/: eval_expr_assign.hpp  eval_expr_leaf_node.hpp  eval_expr_r_binary.hpp  (+5 more)
include/framework/executor/: executor.hpp  executor_subexpr_if_needed.hpp
include/framework/expr_convertor/: expr_convertor.hpp  leaf_count.hpp  local_mem_count.hpp  local_output.hpp  make_place_holder_expr.hpp  place_holder_leaf_node.hpp
include/framework/expr_tree/: expr_tree.hpp
include/framework/memory/: mem_const.hpp  mem_prop.hpp  mem_virtual.hpp  mem_vision.hpp  memory.hpp
include/framework/tools/: convert.hpp  static_if.hpp  time.hpp  tools.hpp  tuple.hpp  type_dereferencer.hpp
include/operators/: OP_Broadcast.hpp  OP_ScaleChannel.hpp  opencvinterop.hpp  ops.hpp
include/operators/convert/: OP_BGRToRGB.hpp  OP_F32C3ToU8C3.hpp  OP_HSVToRGB.hpp  OP_HSVToU8C3.hpp  OP_RGBToBGR.hpp  OP_RGBToGREY.hpp  OP_RGBToHSV.hpp  OP_U8C3ToF32C3.hpp  ops_convert.hpp
include/operators/convolution/: OP_Filter2D.hpp  OP_GaussianBlur3x3.hpp  OP_SepFilter.hpp  OP_SepGauss3x3.hpp  ops_conv.hpp
include/operators/downsampling/: OP_DownsampleAverage.hpp  OP_DownsampleClosest.hpp  ops_downsampling.hpp
include/operators/experimental/: OP_AbsSub.hpp  OP_Add.hpp  OP_AniDiff.hpp  OP_Div.hpp  OP_FloatToF32C3.hpp  OP_Median.hpp  OP_Merge2Chns.hpp  OP_Mul.hpp  OP_PowerOf2.hpp  OP_Scale.hpp  OP_Sub.hpp  OP_Thresh.hpp  experimental.hpp
include/pixel/: pixel.hpp
include/utils/: utils.hpp
scripts/: travis_build_docs.sh  travis_deploy_docs.sh
tests/include/: common.hpp
tests/operators/: cc-gen.py  cc.template
tests/operators/OP_BGRToRGB/: OP_BGRToRGB.hpp
tests/operators/OP_CVBGRToGRAY/: OP_CVBGRToGRAY.hpp
tests/operators/OP_CVBGRToRGB/: OP_CVBGRToRGB.hpp
tests/operators/OP_Filter2D/: OP_Filter2D.hpp
tests/operators/OP_GaussianBlur3x3/: OP_GaussianBlur3x3.hpp
tests/operators/OP_SepFilterCol3x3/: OP_SepFilterCol3x3.hpp
tests/operators/OP_UnsignedBGRToFloatRGB/: OP_UnsignedBGRToFloatRGB.hpp
(+20 files in other folders)
